offic and reprd to caption

--- a/paper/our_submissions.tex
+++ b/paper/our_submissions.tex
@@ -34,6 +34,7 @@
     \bottomrule
   \end{tabular}
  }
-  \caption{Our submissions results.}
+  \caption{Our submissions results: \texttt{offic}ial and those that can be
+  \texttt{repr}o\texttt duced with the code in the project repo.  }
   \label{table:submissions}
 \end{table*}
