--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -443,7 +443,7 @@ seeding.
 
 \input{baseline}
 
-\subsection{Query type sensitive baselining}
+\subsection{A query type sensitive baseline}
 
 Our submission with attribute pairs achieved first place in 
 categories
