--- a/paper/ablation1A.tex
+++ b/paper/ablation1A.tex
@@ -19,8 +19,8 @@ on  & on   & 12.1 & 25.3 & 18.7 & 13.0 & 11.6 & 11.0 \\
 	\end{tabular}
 	}
 \caption{Ablation experiments, on the 1A dataset with $k=200,ns=50$ (and the 
-implementation of the is\_frequent\_hypernym fixed). The first two columns 
-indicates whether attributePair$_{ij}$ and FCA-derived features are 
+  implementation of \texttt{isFreqHyp} fixed). The first two columns 
+indicate whether attributePair$_{ij}$ and FCA-derived features are 
 utilized, respectively.}
 \label{table:ablation1A}
 \end{table}
