--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -530,6 +530,8 @@ the effects of various feature groups, we identified the importance of
 
 In this paper we demonstrated the effectiveness of sparse coding 
 
+% TODO acknowledge Kornai for more negative samples (elég a végsőben)
+
 \bibliography{../../paper/Common/Bib/ml}
 \bibliographystyle{acl_natbib}
 
