updates post eval sec

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -512,21 +512,20 @@ however, our scores degrade after turning candidate filtration off.
 Our post evaluation experiments in \autoref{table:1A_detailed} suggest that it 
 is advantageous to apply sparse representation of more expressive power (i.e.~a 
 higher number of basis vectors). Generating more negative samples also provide 
-some additional boost in the performance. The previous observations hold 
+some additional performance boost. These previous observations hold 
 irrespective whether candidate filtration is employed or not, however, their 
 effects are more pronounced when hypernym candidates are not filtered.
 
+Finally, we report our post-evaluation results for all the subtasks and compare 
+them to the official scores by the winners of the individual subtasks in 
+\autoref{table:post_eval}.
+
 \input{post_eval}
 
-%\subsection{Candidate restriction}
-
-
-\section{Discussion of the results}
+\section{Conclusion}
 
 Based on our experimental results. In our ablation experiments, we investigated 
 the effects of various feature groups, we identified the importance of 
-
-\section{Conclusion}
 
 In this paper we demonstrated the effectiveness of sparse coding 
 
