--- a/paper/post_eval.tex
+++ b/paper/post_eval.tex
@@ -24,4 +24,5 @@
 \caption{Post evaluation results for the different subtask using $k=1000, 
 ns=50$ and hypernym candidate filtration. Upper: our system, lower: subtask 
 winner.}
+\label{table:post_eval}
 \end{table}
