--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -443,7 +443,7 @@ seeding.
 
 \input{baseline}
 
-\subsection{A query type sensitive baseline}
+\subsection{Query type sensitive baselining}
 
 Our submission with attribute pairs achieved first place in 
 categories
@@ -528,8 +528,6 @@ Based on our experimental results. In our ablation experiments, we investigated
 the effects of various feature groups, we identified the importance of 
 
 In this paper we demonstrated the effectiveness of sparse coding 
-
-% TODO acknowledge Kornai for more negative samples (elég a végsőben)
 
 \bibliography{../../paper/Common/Bib/ml}
 \bibliographystyle{acl_natbib}
