--- a/paper/our_submissions.tex
+++ b/paper/our_submissions.tex
@@ -35,6 +35,7 @@
   \end{tabular}
  }
   \caption{Our submissions results: \texttt{offic}ial and those that can be
-  \texttt{repr}o\texttt duced with the code in the project repo.  }
+  \texttt{repr}o\texttt duced with the code in the project repo (with the 
+  \textit{isFrequentHypernym} feature being turned off).}
   \label{table:submissions}
 \end{table*}
