--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -290,7 +290,7 @@ As we will see in the next section, this restriction turns out to be very useful
 		{sameFirstWord}        & $Q[0] = H[0]$ \\ % 6
 		{sameLastWord}        & $Q[-1] = H[-1]$ \\
 		{logFrequencyRatio} & $\log_{10}\frac{count(q)}{count(h)}$ \\ % 10
-	    {frequent}\footnote\footnotemark & $c \in MF_{50}(q.type)$\\
+	    {isFrequentHypernym}\footnote\footnotemark & $c \in MF_{50}(q.type)$\\
     \midrule
     sameConcept & $n(h)=n(q)$ \\
     parent  & $n(q)\prec n(h)$ \\
@@ -351,7 +351,7 @@ attributes) which are assigned non-zero weights in the reconstruction of the
 vectorial representation of $q$ and $h$ as $\phi(q)$ and $\phi(h)$.  
 It is also considered as a feature whether a
 particular candidate hypernym $h$ belongs to the top-50 most frequent hypernyms
-for the category of $q$ (concept or entity, \texttt{isFreqHyp}).
+for the category of $q$ (concept or entity, \texttt{isFrequentHypernym}).
 Modelling categories concept separately played an important role in the success
 of our systems.
 
