--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -518,7 +518,7 @@ effects are more pronounced when hypernym candidates are not filtered.
 Finally, we report our post-evaluation results for all the subtasks and compare
 them to the official scores by the winners of the individual subtasks in
 \autoref{table:post_eval}. It can be seen from these enhanced results for
-``all'' (concepts and entities mixed) that we would win (1B) Italian and (1C)
+category ``all'' (concepts and entities mixed) that we would win (1B) Italian and (1C)
 Spanish. Our system would also place second in (1A) English.
 
 \input{post_eval}
