minor change in conclusion

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -529,7 +529,7 @@ In this paper we experimented with the integration of sparse word
 representations into the task of hypernymy discovery. We strived to utilize 
 sparse word representations in two ways, i.e.~via building concept lattices 
 using formal concept analysis and modeling the hypernymy relation with the help 
-of interaction terms obtained from sparse word representations. While our 
+of interaction terms. While our 
 former approach for deriving formal concepts from sparse word representations 
 was not successful, the interaction terms derived from sparse word 
 representations proved to be highly beneficial.
