--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -54,7 +54,7 @@ Department of Informatics \\ University of Szeged \\
 \maketitle
 
 \begin{abstract}
-  This paper describes 300-sparsians’s participation in SemEval-2018 Task 9:
+  This paper describes 300-sparsians’ participation in SemEval-2018 Task 9:
   \emph{Hypernym Discovery}, with a system based on sparse coding and a formal
   concept hierarchy obtained from word embeddings.
   Our system took first place in subtasks
@@ -248,14 +248,16 @@ We use the popular skip-gram (SG) %and continuous-bag-of-words (CBOW)
 approach \citep{Mikolov:2013f} to train $d=100$ dimensional dense distributed
 word representations for each sub-corpora. The word embeddings are trained over the text corpora provided by the shared task organizers with the default training parameters of \texttt{word2vec} (w2v), i.e.~a window size of 10 and negative 25 negative samples for each positive contexts.
 
-We derived \emph{multi-token units} by relying on the \texttt{word2phrase} software accompanying the w2v toolkit. An additional source for identifying multi-token units in the training corpus was the list of potential hypernyms released for each subtask by the shared task organizers.
+We derived \emph{multi-token units} by relying on the \texttt{word2phrase} 
+software accompanying the w2v toolkit. An additional source for identifying 
+multi-token units in the training corpora was the list of potential hypernyms 
+released for each subtask by the shared task organizers.
 
-Given the the dense embedding matrix $W_x \in \mathbb{R}^{d \times \lvert V_x
+Given the dense embedding matrix $W_x \in \mathbb{R}^{d \times \lvert V_x
 \rvert}$, 
 for some subcorpus of the shared task $x\in\{1A, 1B, 1C, 2A, 2B\}$, 
 where $\lvert V_x \rvert$ is the size of the vocabulary and $d$ is set
-to 100,
-as a subsequent step, we turn $W_x$ into
+to 100. As a subsequent step, we turn $W_x$ into
 \emph{sparse word vectors} akin to \citet{Berend:2017} by solving for
 \begin{equation}
 \min\limits_{D \in \mathcal{C}, \alpha \in \mathbb{R}_{\geq0}} \lVert D\alpha - W_{x} \rVert_F + \lambda \lVert \alpha \rVert_1,
@@ -290,7 +292,7 @@ As we will see in the next section, this restriction turns out to be very useful
 		{sameFirstWord}        & $Q[0] = H[0]$ \\ % 6
 		{sameLastWord}        & $Q[-1] = H[-1]$ \\
 		{logFrequencyRatio} & $\log_{10}\frac{count(q)}{count(h)}$ \\ % 10
-	    {isFrequentHypernym}\footnote\footnotemark & $c \in MF_{50}(q.type)$\\
+	    {isFrequentHypernym}\footnotemark & $c \in MF_{50}(q.type)$\\
     \midrule
     sameConcept & $n(h)=n(q)$ \\
     parent  & $n(q)\prec n(h)$ \\
@@ -307,8 +309,6 @@ attributePair$_{ij}$      & $\langle i,j\rangle\in\phi(q)\times\phi(h)$ \\ % 3..
   %The list of core features considering a $(q,h)$ pair of phrases.}
 	\label{table:core_features}
 \end{table}
-
-\footnotetext{At submission time, this feature did not work properly.}
 
 % official submission ('concept', '
 %  cosines 8.8
@@ -352,8 +352,10 @@ vectorial representation of $q$ and $h$ as $\phi(q)$ and $\phi(h)$.
 It is also considered as a feature whether a
 particular candidate hypernym $h$ belongs to the top-50 most frequent hypernyms
 for the category of $q$ (concept or entity, \texttt{isFrequentHypernym}).
-Modelling categories concept separately played an important role in the success
+Modeling categories separately played an important role in the success
 of our systems.
+
+\footnotetext{At submission time, this feature did not work properly.}
 
 Three additional features are defined for incorporating the concept lattice
 output by FCA. With $n(w)$ denoting the concept that introduces $w$, i.e.~the
@@ -384,7 +386,9 @@ In order to be able to rank potential candidates for previously unseen test
 query cases we trained a separate \emph{logistic regression} classifier for the
 \textit{concept} and \textit{entity} types of queries relying on the
 \texttt{sklearn} package
-\citep{Pedregosa:2011}\footnote{\url{scikit-learn.org}} with the regularization parameter defaulting to $1.0$.
+\citep{Pedregosa:2011}\footnote{\url{scikit-learn.org}} with the regularization 
+parameter defaulting to $1.0$.
+
 For each appropriate $(q,h)$ pair of words for which
 $h$ is a hypernym of $q$, we generated a number of \emph{negative samples} $(q, h')$,
 such that the training data does not include $h'$ as a valid hypernym for $q$.
@@ -395,10 +399,9 @@ q$ query phrase.
 
 When making predictions for the hypernyms of a query, we relied on our query
 type sensitive logistic regression model to determine the ranking of the
-hypernym candidates. In our original submission we decided to treat such
-phrases to rank for potentially being a proper hypernym which served as a
-proper hypernym of at least one times on the training data for a given query
-type.
+hypernym candidates. In our official submission we treated such
+phrases to rank which were included in the training data for 
+being a proper hypernym at least once.
 
 After the appropriate model ranked the hypernym candidates, we selected
 the top 15 ranked candidates and applied a \emph{post-ranking} heuristic over them,
@@ -413,7 +416,7 @@ more easily detectable than more specialized ones.
 
 \subsection{Our submissions}
 
-Our submissions were based on 200-dimensional sparse vectors computed from
+Our submissions were based on $k=200$ dimensional sparse vectors computed from
 unit-normed 100-dimensional dense vectors with $\lambda=.3$. The sum of the two
 dimensions motivates our group name. For training the regression model with
 negative samples, 50 false hypernyms were sampled for each positive $(q,h)$ 
@@ -501,7 +504,7 @@ this way the size of the concept lattice could be made smaller.
 As there are valid hypernyms on the test set which never occurred in the 
 training data, our official submission would not be able to obtain a perfect 
 score even in theory. \autoref{table:upper} contains the best possible metrics 
-on the test set that we could achieve as a result of candidate filtration. In 
+on the test set that we could achieve when candidate filtration is applied. In 
 our post evaluation experiments we also investigated the effects of turning 
 this kind of filtration step off. As \autoref{table:1A_detailed} illustrates, 
 however, our scores degrade after turning candidate filtration off.
@@ -516,10 +519,13 @@ irrespective whether candidate filtration is employed or not, however, their
 effects are more pronounced when hypernym candidates are not filtered.
 
 Finally, we report our post-evaluation results for all the subtasks and compare
-them to the official scores  of the best performing systems 
+them to the official scores  of the best performing systems in 
 \autoref{table:post_eval}. It can be seen from these enhanced results for 
 category ``all'' (concepts and entities mixed) that we would win (1B) Italian 
-and (1C) Spanish. Our system would also place second in (1A) English.
+and (1C) Spanish. Our post-evaluation system -- which only differs from our 
+participating system that it fixes the calculation of a features, does 
+not rely on FCA-based features and uses $k=1000$ -- would also place third in 
+the rest of the subtasks.
 
 \input{post_eval}
 
@@ -529,10 +535,9 @@ In this paper we experimented with the integration of sparse word
 representations into the task of hypernymy discovery. We strived to utilize 
 sparse word representations in two ways, i.e.~via building concept lattices 
 using formal concept analysis and modeling the hypernymy relation with the help 
-of interaction terms. While our 
-former approach for deriving formal concepts from sparse word representations 
-was not successful, the interaction terms derived from sparse word 
-representations proved to be highly beneficial.
+of interaction terms. While our former approach for deriving formal concepts 
+from sparse word representations was not successful, the interaction terms 
+derived from sparse word representations proved to be highly beneficial.
 
 % TODO acknowledge Kornai for useful comments (more negative samples) (elég a
 % végsőben)
