modifies according to reviewer suggestions

--- a/paper/coverage.tex
+++ b/paper/coverage.tex
@@ -31,7 +31,7 @@
 }
 	%}
   \caption{Number of in-vocabulary (and out-of-vocabulary, OOV) queries per
-  query types.  The ratio of the latter is also shown.}
+  query type.  The ratio of the latter is also shown.}
 	\label{table:coverage}
 \end{table}
 
