modifies further according to reviewer suggestions

--- a/paper/big_table.tex
+++ b/paper/big_table.tex
@@ -2,8 +2,8 @@
 \resizebox{\textwidth}{!}{
 \begin{tabular}{ll|rrrrrr|rrrrrr}
   \toprule
-	& & \multicolumn{6}{c|}{candidate filtration off} & 	
-	\multicolumn{6}{c}{candidate filtration on}\\
+	& & \multicolumn{6}{c|}{candidate filtering off} & 	
+	\multicolumn{6}{c}{candidate filtering on}\\
 	\toprule
 	k & ns &     MAP &    MRR &    P@1 &     P@3 &    P@5 &    P@15 & 	MAP 
 	&    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
