--- a/paper/post_eval.tex
+++ b/paper/post_eval.tex
@@ -22,7 +22,7 @@
 \end{tabular}
 }
 \caption{Post evaluation results for the different subtasks using $k=1000, 
-ns=50$ and hypernym candidate filtration. Upper: our system, lower: subtask 
+ns=50$ and hypernym candidate filtering. Upper: our system, lower: subtask 
 winner.}
 \label{table:post_eval}
 \end{table}
