fixes pervious commit

--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -139,7 +139,7 @@ hypernym hierarchy offers itself as a natural choice.
 The task \citep{Camacho-Collados:2018} evaluated systems on their ability to
 extract hypernyms for query words in five subtasks (three languages, English,
 Italian, and Spanish, and two domains, medical and music). Queries have been
-categorized as meaning components or entities. Results were reported for each category 
+categorized as concepts or entities. Results were reported for each category 
 separately as well as in combined form, thus resulting in $5\times 3$ 
 combinations.  
   Our system took first place in subtasks
