--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -535,8 +535,13 @@ of interaction terms. While our former approach for deriving formal concepts
 from sparse word representations was not successful, the interaction terms 
 derived from sparse word representations proved to be highly beneficial.
 
-% TODO acknowledge Kornai for useful comments (more negative samples) (elég a
-% végsőben)
+\section*{Acknowledgements}
+
+We would like to thank András Kornai for useful comments on negative sampling.
+This research was supported by the project \emph{Integrated program for
+training new generation of scientists in the fields of computer science},
+no.~EFOP-3.6.3-VEKOP-16-2017-0002. The project has been supported by the
+European Union and co-funded by the European Social Fund.
 
 \bibliography{../../paper/Common/Bib/ml}
 \bibliographystyle{acl_natbib}
