small clarification regarding poster sizes

--- a/poster-300-sparsans.tex
+++ b/poster-300-sparsans.tex
@@ -1,1 +1,4 @@
  3. Most of you will be presenting posters. Please prepare a poster with the following dimensions: 8ft wide and 4ft high.
+ poster boards will 4 by 8 feet (121 x 242 cm) in size, and they can
+ accommodate 2’ x 3’ or A0 sized posters in both landscape and portrait
+ formats, or 4’x6’ in landscape format.  So all of these formats are acceptable
