--- a/paper/poster/sparsians-poster.tex
+++ b/paper/poster/sparsians-poster.tex
@@ -58,15 +58,15 @@
 \structure{\insertcaptionnumber.~\insertcaptionname} \insertcaption}
 
 % Define colours (see beamerthemeconfposter.sty to change these colour
-% definitions) TODO
+% definitions)
 
 \setbeamercolor{block title}{fg=dblue,bg=white}
-\setbeamercolor{block body}{fg=black,bg=white}
-\setbeamercolor{alerted title}{fg=white,bg=dblue}
-\setbeamercolor{block alerted title}{fg=white,bg=dblue!70}
-\setbeamercolor{block alerted body}{fg=black,bg=dblue!10}
-\setbeamercolor{alerted text}{fg=dgreen}
-\setbeamercolor{item}{fg=dgreen}
+%\setbeamercolor{block body}{fg=black,bg=white}
+%\setbeamercolor{alerted title}{fg=white,bg=dblue}
+%\setbeamercolor{block alerted title}{fg=white,bg=dblue!70}
+%\setbeamercolor{block alerted body}{fg=black,bg=dblue!10}
+\setbeamercolor{alerted text}{fg=szegedgreen}
+%\setbeamercolor{item}{fg=dgreen}
 \setbeamercolor{item projected}{bg=dgreen}
 
 \definecolor{amber}{rgb}{1.0, 0.75, 0.0}
@@ -93,9 +93,11 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
 \addtobeamertemplate{headline}{}
 {
   \begin{tikzpicture}[remember picture,overlay]
-    \node [shift={(-10 cm,-4cm)}]
+    \node [shift={(-17 cm,-7cm)}]
     at (current page.north east)
-    {\includegraphics[height=5cm]{SZTE}};
+    {\includegraphics[height=8cm]{SZTE}
+    \hspace{1cm}
+    \includegraphics[height=8cm]{../../../paper/Common/Logo/nytud/logo_only_tr.png}};
     % img//home/makrai/repo/paper/Common/Logo/nytud/.png}};
   \end{tikzpicture}
 }
@@ -110,6 +112,7 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
 {\end{table}}
 
 % \renewcommand{\resizebox}[3]{#3}
+\renewcommand{\caption}[1]{}
 
 \begin{frame}[t] 
   \begin{columns}[t] % the [t] option aligns the column's content at the top
@@ -154,20 +157,9 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
             \bull{sparse word vectors for the two languages such that \\ coding
             bases correspond to each other}
 
-            % TODO move this paragraph somewhere Here we apply sparse feature
-            % pairs to hypernym extraction. The role of an attribute pair
-            % $\langle i,j\rangle\in\phi(q)\times\phi(h)$ (where $q$ is the
-            % query word, $h$ is the hypernym candidate, and $\phi(w)$ is the
-            % index of a non-zero component in the sparse representations of
-            % $w$) is similar to \emph{interaction terms} in regression, see
-            % \autoref{sec:approach} for details.
-
             % \item relation to hypernymy 
             % \begin{itemize} 
             % \item \emph{Formal concept Analysis (FCA)}
-            % \item concept hierarchy from a text corpus with FCA \citep{Cimiano:2005}
-            % TODO Tools.  Our submissions experiment with formal concept
-            % analysis tool by \citet{Endres:2010} \end{itemize}
         \end{itemize}
       \end{block}
 
@@ -186,8 +178,8 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
           \item Our system took first place in subtasks 
             \begin{itemize}
               \item \emph{(1B) Italian} (\emph{all} and \emph{entities})
-              \item \emph{(1C) Spanish entities}
-              \item and \emph{(2B) music entities}
+              \item \emph{(1C) Spanish entities} and 
+              \item \emph{(2B) music entities}
             \end{itemize}
         \end{itemize}
       \end{block}
@@ -196,7 +188,6 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
   \begin{itemize}
     \item FCA is the mathematization of a conceptual hierarchy 
       \begin{itemize}
-          % TODO \citep{Ganter:2012,Endres:2010}. % vagy 2009
         \item a set of \emph{objects}, now words $w\in\ob$, 
         \item a set of \emph{attributes}, now vector indices $i\in\at$, and
         \item a binary incidence relation 
@@ -232,6 +223,8 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
     \item The smallest node in the concept lattice $n(w)$ whose extent contains a word
       $w$ is said to \emph{introduce} the object.
     \item $h$ should be a hypernym of $q$ iff $n(q)\le n(h)$ 
+    \item tools: \citet{Endres:2010,Cimiano:2005}
+          %\url{www.compsens.uni-tuebingen.de/pub/pages/personals/3/concepts.py}
   \end{itemize}
 \end{block} 
 
@@ -261,9 +254,6 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
         \item $\alpha$ contains the sparse coefficients for the words. The only 
         \item akin to \citet{Berend:2017} + new non-negativity constraint over the
           elements of $\alpha$.
-          % TODO Tool For the elements of the vocabulary we ran the \emph{formal
-          % concept analysis} tool of
-          % \citet{Endres:2010}\footnote{\url{www.compsens.uni-tuebingen.de/pub/pages/personals/3/concepts.py}}.
         \item To keep the size of the FCA tree manageable, we only included the
           query words and the training hypernyms This restriction turns out to be
           very useful.
@@ -340,8 +330,6 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
     non-zero weights in the reconstruction of $\mathbf q$ and $\mathbf h$.
   \item $MF_{50}(q.type)$: 50 most frequent hypernyms for the query type
     (i.e.~concept or entity). Debugged after submission.
-    % TODO Modeling the two categories separately played an important role in the
-    % success of our systems.  
   \item three features related to the \alert{FCA concept lattice}
     \begin{itemize}
       \item $n(w)$ is the concept that introduces $w$, i.e.~the most specific
@@ -359,13 +347,17 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
 
 
   \item \texttt{attributePair}$_{ij}$s are the most important features
-    \bull{indicator features for the interaction terms between the sparse
-    coefficients in $\alpha$.
-    % Candidates get assigned with the Cartesian product derived from the
-    % indices of the non-zero coefficients in $\alpha$. 
-    This feature template induces $k^2$ features, with $k$ being the number of
-    basis vectors introduced in the dictionary matrix $D$ according to
-    Eq.~\ref{nonneg_SPAMS_objective}.}
+    \begin{itemize}
+      \item indicator features for the interaction terms between the sparse
+        coefficients in $\alpha$.
+        % Candidates get assigned with the Cartesian product derived from the
+        % indices of the non-zero coefficients in $\alpha$. 
+      \item This feature template induces $k^2$ features, with $k$ being the
+        number of basis vectors introduced in the dictionary matrix $D$
+        according to Eq.~\ref{nonneg_SPAMS_objective}
+      \item the role of these features is similar to \emph{interaction terms}
+        in regression
+    \end{itemize}
 \end{itemize}
 \end{block}
 \end{column} 
@@ -374,6 +366,10 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
 \end{column}   
 
 \begin{column}{\onecolwid}
+
+  \begin{alertblock}{}
+    \url{https://github.com/begab/fca_hypernymy}
+  \end{alertblock}
 
   \begin{block}{Standard ingredients}
     \begin{itemize}
@@ -392,7 +388,7 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
     \end{itemize}
   \end{block}
 
-  \begin{block}{Secret sauce}
+  \begin{block}{Implementation and tricks}
     \begin{itemize}
       \item \alert{logistic regression} classifier trained for concepts and
         entities \bull{\texttt{sklearn}
@@ -405,9 +401,6 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
         \bull{given the query category (\textit{concept} or \textit{entity}) $h'$
         sampled from the valid training hypernyms}
 
-        % TODO we treated such phrases to rank which were included in the training data
-        % for being a proper hypernym at least once.
-
         After the appropriate model ranked the hypernym candidates, we selected
         the top 15 ranked candidates and applied a 
       \item \alert{post-ranking} heuristic 
@@ -418,9 +411,6 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
         \end{itemize}
     \end{itemize}
   \end{block}
-  \begin{alertblock}{}
-    \url{https://github.com/begab/fca_hypernymy}
-  \end{alertblock}
 
   \section{Results} \label{sec:results}
 
@@ -437,7 +427,7 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
         harmful FCA-based features.
     \end{itemize}
 
-    \input{../our_submissions}
+    % \input{../our_submissions}
 
     % \autoref{table:submissions} shows submission results.  The figures that
     % can be reproduced with the code in the project repo (\texttt{reprd}) is
@@ -445,17 +435,29 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
     % reasons: because the implementation of \texttt{isFreqHyp} contained a
     % bug, and because of the natural randomness in negative sampling.  For
     % reproducibility, we report result without the \texttt{isFreqHyp} feature.
-    % TODO The randomness introduced by negative sampling is now factored out
+    % The randomness introduced by negative sampling is now factored out
     % by random seeding.
   \end{block}
 
-  % TODO \subsection{Feaure analysis} weights and histograms 
+  % TODO or not TODO 
+  %   \subsection{Feaure analysis} weights and histograms 
+  %   \subsection{Qualitative analysis} Here we investigate the system's
+  %     ability to extract (good) hypernyms that were not seen for any word
+  %     during training.  This setting is sometimes called zero-shot learning.  
+  %   \subsection{Generality, frequency and vector length}
 
-  % \subsection{Qualitative analysis} TODO Here we investigate the system's
-  % ability to extract (good) hypernyms that were not seen for any word during
-  % training.  This setting is sometimes called zero-shot learning. 
 
-  % TODO \subsection{Generality, frequency and vector length}
+\begin{block}{Query type sensitive baselining for OOV}
+
+  \input{../baseline}
+
+  \begin{itemize}
+    \item \alert{upper:} category-sensitive baseline, most frequent train
+      hypernym in the corresponding query type, concept or entity
+    \item \alert{lower:} the MFH baseline provided by the organizers (the
+      most frequent hypernyms in general)
+  \end{itemize}
+\end{block}
 
 \end{column} 
 
@@ -466,127 +468,92 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
 
 \begin{column}{\onecolwid} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+  % \begin{block}{Vocabulary coverage}
+  % 
+  % \input{../coverage}
+  % 
+  % \end{block}
 
-\begin{block}{Query type sensitive baselining}
+  \begin{block}{Post-evaluation analysis (without FCA)}
 
-\input{../baseline}
+    Features derived with \alert{sparse attribute pairs} and/or \alert{FCA}:
+    \input{../ablation1A}
 
-% Our submission with attribute pairs achieved first place in 
-% categories
-% {(1B) Italian} ({all} and {entities}),
-% {(1C) Spanish entities}, and
-% % TODO analyze why we won
-% {(2B) music entities}.
-An important feature of our system is the good choice of a fallback solution
-in the case of OOV queries: we applied a category-sensitive baseline returning
-the most frequent train hypernym in the corresponding query type (concept or
-entity).  Table~\ref{table:coverage} shows how frequently we had to rely on
-this fallback, and \autoref{table:MFH} shows the corresponding pure baseline
-results.
-
-\input{../coverage}
-
-\end{block}
-
-\begin{block}{Post-evaluation analysis}
-
-
-\input{../ablation1A}
-
-After the evaluation closed, we conducted ablation experiments the results of 
-which are included in
-\autoref{table:ablation1A}. In these experiments, we investigated the 
-contribution of the features derived from sparse attribute pairs and FCA.
-These ablation experiments corroborate the importance of features derived 
-from sparse attribute pairs and reveal that turning off FCA-based features 
-does not hurt performance at all. For this reason -- even though our official 
-shared task submission included FCA-related features -- we no longer employed 
-them in our post-evaluation experiments.
-
-\input{../big_table}
-
-\autoref{table:1A_detailed} includes the detailed behavior of our model on 
-subtask 1A with respect three distinct factors, that is
-\begin{enumerate}
-  \item the number of basis vectors employed during sparse coding ($k \in 
-    \{200, 300, 1000\}$),
-  \item the number of negative training samples per positive sample ($ns 
-    \in \{50, all\}$),
-  \item candidate filtering being turned on/off.
-\end{enumerate}
-In our original submission we generated 50 negative samples ($ns$) generated 
-per query $q$ during training. In our post evaluation experiments we 
-investigated the effects of generating more negative samples, i.e.~we regarded 
-all the valid hypernyms over the training set -- not being a
-proper hypernym for $q$ -- as $h'$ upon the creation of the $(q, h')$ negative 
-training instances. This latter strategy is referenced as $ns=all$ in 
-\autoref{table:1A_detailed}.
-
-In our official submission we regarded only those hypernyms as potential 
-candidates to rank during test time which occurred at least once as a correct 
-hypernym in the training data. We call this strategy as candidate filtering. 
-Historically, we applied this restriction to speed up the FCA algorithm because 
-this way the size of the concept lattice could be made smaller.
-As there are valid hypernyms on the test set which never occurred in the 
-training data, our official submission would not be able to obtain a perfect 
-score even in theory. \autoref{table:upper} contains the best possible metrics 
-on the test set that we could achieve when candidate filtering is applied. In 
-our post evaluation experiments we also investigated the effects of turning 
-this kind of filtering step off. As \autoref{table:1A_detailed} illustrates, 
-however, our scores degrade after turning candidate filtering off.
-
-\input{../upper}
-
-Our post evaluation experiments in \autoref{table:1A_detailed} suggest that it 
-is advantageous to apply sparse representation of more expressive power (i.e.~a 
-higher number of basis vectors). Generating more negative samples also provides 
-some additional performance boost. These previous observations hold 
-irrespective whether candidate filtering is employed or not, however, their 
-effects are more pronounced when hypernym candidates are not filtered.
-
-Finally, we report our post-evaluation results for all the subtasks and compare
-them to the official scores  of the best performing systems in 
-\autoref{table:post_eval}. It can be seen from these enhanced results for 
-category ``all'' (concepts and entities mixed) that we would win (1B) Italian 
-and (1C) Spanish. Our post-evaluation system -- which only differs from our 
-participating system that it fixes the calculation of a features, does 
-not rely on FCA-based features and uses $k=1000$ -- would also place third in 
-the rest of the subtasks.
-
-\input{../post_eval}
-\end{block}
-
-\section{Conclusion}
-
-In this paper we experimented with the integration of sparse word 
-representations into the task of hypernymy discovery. We strived to utilize 
-sparse word representations in two ways, i.e.~via building concept lattices 
-using formal concept analysis and modeling the hypernymy relation with the help 
-of interaction terms. While our former approach for deriving formal concepts 
-from sparse word representations was not successful, the interaction terms 
-derived from sparse word representations proved to be highly beneficial.
-
-\section*{Acknowledgements}
-
-We would like to thank András Kornai for useful comments on negative sampling.
-This research was supported by the project \emph{Integrated program for
-training new generation of scientists in the fields of computer science},
-no.~EFOP-3.6.3-VEKOP-16-2017-0002. The project has been supported by the
-European Union and co-funded by the European Social Fund.
-
-  \begin{block}{Future work} 
     \begin{itemize}
-      \item \emph{hierarchical sparse coding} \citep{Zhao:2009}, where
+      \item number of basis vectors in sparse coding ($k \in 
+        \{\mathbf{200}, 300, 1000\}$),
+      \item number of \alert negative training \alert samples per positive sample 
+        \begin{itemize}
+          \item submissions: 50 negative samples generated per query $q$
+          \item post evaluation: \textbf{all} hypernyms in the training set
+            \\ except for the proper hypernyms for $q$ 
+        \end{itemize}
+      \item candidates filtered to those present in the training data
+        \begin{itemize}
+          \item Historically, applied to speed up the FCA algorithm
+            (smaller concept lattice)
+        \end{itemize}
+      \item \textbf{boldface font} above: submission settings
+    \end{itemize}
+
+  \end{block}
+  \begin{block}{1A}
+      \input{../big_table} 
+
+      % Coverage with candidate filtering:
+      % 
+      % \input{../upper}
+
+      %  \end{block}
+      %
+      % \begin{block}{Discussion}
+      % 
+      % \begin{itemize}
+      % \item it is advantageous to apply sparse representation of more
+      % expressive power (i.e.~a higher number of basis vectors).
+      % \item Generating more negative samples also provides some additional
+      % performance boost. 
+      % \item longer sparse vector help irrespective whether candidate
+      % filtering is employed or not
+      % \bull{effect more pronounced when hypernym candidates are not
+      % filtered}
+      % \end{itemize}
+
+      \end{block}
+      \begin{block}{All the subtasks}
+        with comparison to the official scores of the winners
+
+        \input{../post_eval} 
+
+        % \autoref{table:post_eval}. It can be seen from these enhanced results
+        % for category ``all'' (concepts and entities mixed) that 
+        % we would win (1B) Italian and (1C) Spanish. Our post-evaluation
+        % system -- which only differs from our participating system that it
+        % fixes the calculation of a features, does not rely on FCA-based
+        % features and uses $k=1000$ -- would also place third in the rest of
+        % the subtasks.  
+
+      \end{block} 
+
+  \begin{block}{Future work: hierarchical sparse coding}
+    \begin{itemize}
       \item trees describe the order in which variables “enter the model”
-        (i.e., take non-zero values). 
-      \item A node may take a non-zero value only if its ancestors also do:
-      \item the dimensions that correspond to top level nodes should focus
-        on “general” meaning components that are present in most words.
-      \item efficient implementation \citet{Yogatama:2015} 
+        (i.e., take non-zero values, \cite{Zhao:2009})
+      \item a node may enter only if its ancestors also do
+      \item % the dimensions that correspond to 
+        top level nodes should focus on \emph{general} meaning components 
+        % that are present in most words
+      \item efficient implementation \citep{Yogatama:2015} 
       \item correspondence between 
         the variable tree and the hypernym hierarchy
     \end{itemize}
+
+        {\footnotesize Research supported by the project \emph{Integrated
+        program for training new generation of scientists in the fields of computer
+        science}, no.~EFOP-3.6.3-VEKOP-16-2017-0002. The project has been supported
+        by the European Union and co-funded by the European Social Fund.}
   \end{block}
+\end{column} \end{columns} \end{frame} 
 
   \begin{block}{References}
     \footnotesize
@@ -594,8 +561,5 @@ European Union and co-funded by the European Social Fund.
     \bibliographystyle{abbrvnat}
     \bibliography{../../../paper/Common/Bib/ml} 
   \end{block}
-\end{column}
-\end{columns} 
-\end{frame} 
 \end{document}
 
